# c2py

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile.build  Jenkinsfile  README.md  c2py_flags.py.in
packaging/: Dockerfile.sanitize  Dockerfile.ubuntu-clang  Dockerfile.ubuntu-gcc  Dockerfile.ubuntu-intel
share/: CMakeLists.txt  c2py.modulefile.in  c2pyvars.sh.in
share/cmake/: CMakeLists.txt  c2py-config.cmake.in
src/: CMakeLists.txt
src/c2py/: CMakeLists.txt  c2py.hpp  concepts4plugin.hpp  cpp_name.hpp  py_converter.hpp  py_range.hpp  pydict.hpp  pyfunction.cpp  pyfunction.hpp  pyinterpreter.hpp  pyref.cpp  pyref.hpp  user_api.hpp
src/c2py/converters/: basic_types.hpp  enums.hpp  misc.hpp  numpy_proxy.cpp  numpy_proxy.hpp  pydict.hpp  wrapped.cpp  wrapped.hpp
src/c2py/converters/stl/: array.hpp  common.hpp  complex.hpp  function.hpp  map.hpp  optional.hpp  pair.hpp  set.hpp  span.hpp  string.hpp  tuple.hpp  variant.hpp  vector.hpp
src/c2py/dyn_dispatch/: binaryfunc.hpp  dispatcher.hpp  pycfun_kw.cpp  pycfun_kw.hpp
src/c2py/pytypes/: arithmetic.hpp  iterator.hpp  specialmethods.hpp  wrap.hpp
src/c2py/serialization/: as_tuple.hpp  h5.hpp  repr.hpp
src/c2py/util/: macros.hpp  numpy_includer.hpp  nv_pair.hpp  str.hpp  traits.hpp  type_name.hpp
test/: CMakeLists.txt  annote.cpp  annote.wrap.cxx  basicfun.cpp  basicfun.cpp.cxx  basicfun.cxx  basicfun.wrap.cxx  callables.cpp  callables_test.py  callback.wrap.cxx  callback_test.py  cls.cpp  cls.cxx  cls_basic.cpp  cls_basic.wrap.cxx  cls_basic_test.py  cls_der.cpp  cls_der.cxx  cls_der_test.py  enumcxx_test.py  generator.wrap.cxx  generator_test.py  issue9.cpp  issue9.wrap.cxx  itertool_test.py  synth_init.cpp  synth_init.wrap.cxx  tpl_cls.cpp  tpl_cls_test.py  tpl_derived.cpp  tpl_derived_test.py
test/c2py/: CMakeLists.txt  annote_test.py  basicfun.cpp  basicfun_test.py  callables.wrap.cxx  callback.cpp  callback_test.py  cls.cpp  cls_der.cpp  cls_der.wrap.cxx  cls_test.py  comparison.cpp  comparison.wrap.cxx  comparison_test.py  embed.cxx  enumcxx.cpp  enumcxx.wrap.cxx  generator.cpp  issue9_test.py  itertool.cpp  itertool.wrap.cxx  synth_init_test.py  tpl_cls.wrap.cxx  tpl_derived.wrap.cxx  two_module_1.cpp  two_module_1.hpp  two_module_1.wrap.cxx  two_module_1.wrap.hxx  two_module_1_test.py  two_module_2.cpp  two_module_2.wrap.cxx  two_module_2_test.py
test/cppcoro/: generator.hpp
